--- a/.github/workflows/master_abutopythonstreaming.yml
+++ b/.github/workflows/master_abutopythonstreaming.yml
@@ -31,6 +31,12 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Build React Frontend
+        run: |
+            cd frontend
+            npm install
+            npm run build
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
